fix local kafka

--- a/spring/order-service/src/main/resources/application.yaml
+++ b/spring/order-service/src/main/resources/application.yaml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: order-service
+  banner:
+    location: static/banner.txt
 data:
   local:
     PRODUCT_DEFINITION_FILE: static/DrugStoreProducts-categorized.json
@@ -8,7 +10,7 @@ messaging:
   pubsub:
     enabled: true
     TOPIC_NAME: order-service-topic
-    SUB_NAME: order-service-subscription
+    SUB_NAME: pubsub
 management:
   endpoints:
     web:
