--- a/spring/virtual-customers/pom.xml
+++ b/spring/virtual-customers/pom.xml
@@ -82,9 +82,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.arakelian</groupId>
-            <artifactId>faker</artifactId>
-            <version>3.10.0</version>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
         </dependency>
         <dependency>
             <groupId>org.jobrunr</groupId>
